--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "axios": "^0.21.4",
+    "cookie": "^0.4.1",
     "js-cookie": "^3.0.1",
     "next": "^11.1.2",
     "react": "17.0.2",
